--- a/promos.html
+++ b/promos.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 
     <title>Document</title>
 </head>
@@ -13,17 +17,17 @@
 <header>
     <div id="buscadorArticulos" class=" container col-md-12 row justify-content-end" >
         <input type="text" placeholder="Busca tus articulos">
-        <button type="submit" id="botonBuscar">Buscar</button>
+        <button type="submit" id="botonBuscar"  class="btn btn-secondary">Buscar</button>
     </div>
 
     <div id="login">
         <div id="boton " class="container col-md-12 row justify-content-end">
-            <a href="formularioregistro.html"><button>Registrate</button></a>
+            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#Registro"  href="formularioregistro.html">Registrate</a>
         </div>
         
         
         <div id="boton" class="container col-md-12 row justify-content-end">    
-            <a href="formularioingreso.html"><button>Iniciar Sesion</button></a>
+            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#InicioSesion" href="formularioingreso.html">Iniciar Sesion</a>
         </div>
     </div>
 </header>
