--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
 <ul class="nav nav-pills nav-fill">
         <li class="nav-item">
-          <a id="boton1" class="nav-link active" onclick="precionarBoton(1)" href="#">Inicio</a>
+          <a id="boton1" class="nav-link active btn btn-primary" onclick="precionarBoton(1)" href="#">Inicio</a>
         </li>
         <li class="nav-item">
-          <a id="boton2" class="nav-link" onclick="precionarBoton(2)" href="productos.html">Productos</a>
+          <a id="boton2" class="nav-link border btn btn-primary" onclick="precionarBoton(2)" href="productos.html">Productos</a>
         </li>
         <li class="nav-item">
-          <a id="boton3" class="nav-link" onclick="precionarBoton(3)"" href="promos.html">Promos</a>
+          <a id="boton3" class="nav-link btn btn-primary" onclick="precionarBoton(3)" href="promos.html">Promos</a>
         </li>
       </ul>
 
