--- a/productos.html
+++ b/productos.html
@@ -32,17 +32,19 @@
     </div>
 </header>
 
-<ul class="nav nav-pills nav-fill">
-        <li class="nav-item">
-          <a id="boton1" class="nav-link" onclick="precionarBoton(1)" href="index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a id="boton2" class="nav-link active" onclick="precionarBoton(2)" href="#">Productos</a>
-        </li>
-        <li class="nav-item">
-          <a id="boton3" class="nav-link" onclick="precionarBoton(3)" href="promos.html">Promos</a>
-        </li>
-      </ul>
+  <div class="container">
+    <ul class="nav nav-pills nav-fill">
+      <li class="nav-item">
+        <a id="boton1" class="nav-link" onclick="precionarBoton(1)" href="index.html">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a id="boton2" class="nav-link  active btn btn-primary" onclick="precionarBoton(2)" href="">Productos</a>
+      </li>
+      <li class="nav-item">
+        <a id="boton3" class="nav-link " onclick="precionarBoton(3)" href="promos.html">Promos</a>
+      </li>
+    </ul>
+  </div>
 
 <h1>PRODUCTOS</h1>
 
