--- a/promos.html
+++ b/promos.html
@@ -32,17 +32,19 @@
     </div>
 </header>
 
-<ul class="nav nav-pills nav-fill">
-        <li class="nav-item">
-          <a id="boton1" class="nav-link " onclick="precionarBoton(1)" href="index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a id="boton2" class="nav-link" onclick="precionarBoton(2)" href="productos.html">Productos</a>
-        </li>
-        <li class="nav-item">
-          <a id="boton3" class="nav-link active" onclick="precionarBoton(3)"" href="#">Promos</a>
-        </li>
-      </ul>
+<div class="container">
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a id="boton1" class="nav-link" onclick="precionarBoton(1)" href="index.html">Inicio</a>
+    </li>
+    <li class="nav-item">
+      <a id="boton2" class="nav-link" onclick="precionarBoton(2)" href="productos.html">Productos</a>
+    </li>
+    <li class="nav-item">
+      <a id="boton3" class="nav-link active btn btn-primary" onclick="precionarBoton(3)" href="">Promos</a>
+    </li>
+  </ul>
+</div>
 
 <div class="contenedor">
 <div class="titulo"><h1> PROMOS </h1></div>
