--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
   </header>
 
-  <div class="container">
+  <div class="container col-md-6" id="nav">
     <ul class="nav nav-pills nav-fill">
       <li class="nav-item">
         <a id="boton1" class="nav-link active btn btn-primary" onclick="precionarBoton(1)" href="#">Inicio</a>
