--- a/promos.html
+++ b/promos.html
@@ -32,7 +32,7 @@
     </div>
 </header>
 
-<div class="container">
+<div class="container col-md-6" id="nav">
   <ul class="nav nav-pills nav-fill">
     <li class="nav-item">
       <a id="boton1" class="nav-link" onclick="precionarBoton(1)" href="index.html">Inicio</a>
