--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-
-
   <title>Document</title>
 </head>
 
@@ -29,20 +27,22 @@
         <input type="text" placeholder="Busca tus articulos">
         <button type="submit" id="botonBuscar" class="btn btn-secondary">Buscar</button>
       </div>
-    </form>
+    
 
+    <!-- Loguearse -->
     <div id="login">
-      <div id="boton " class="container col-md-12 row justify-content-end">
+      <div id="boton" class="container col-md-12 row justify-content-end">
         <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#Registro"
           href="formularioregistro.html">Registrate</a>
-      </div>
+    </div>
 
-
+    <!-- Registrarse -->
       <div id="boton" class="container col-md-12 row justify-content-end">
         <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#InicioSesion"
           href="formularioingreso.html">Iniciar Sesion</a>
       </div>
     </div>
+  </form>
   </header>
 
   <div class="container col-md-6" id="nav">
@@ -59,25 +59,35 @@
     </ul>
   </div>
 
-
-
   <h2>Inicio</h2>
-
-
-
 
   <!-- Modal Sesion -->
   <div class="modal fade" id="InicioSesion" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header justify-content-center">
           <form class="form-reg" action="">
-            <input class="input" type="text" placeholder="&#128100;Usuario" required autofocus>
-            <input class="input" type="password" placeholder="&#8962;Contraseña" required>
-            <div class="btn-form">
-              <input class="class=btn btn-primary" type="submit" value="INGRESAR">
-            </div>
+              <div id="logo">
+                  <img src="img/limp.png" alt="" width="100px">
+                </div>
+                <div class="input-group input-group-sm mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text" id="inputGroup-sizing-sm">Nombre</span>
+                    </div>
+                    <input type="text" class="form-control" aria-label="Sizing example input"
+                      aria-describedby="inputGroup-sizing-sm">
+                  </div>
+                  <div class="input-group input-group-sm mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroup-sizing-sm">Contraseña</span>
+                      </div>
+                      <input type="text" class="form-control" aria-label="Sizing example input"
+                        aria-describedby="inputGroup-sizing-sm">
+                    </div>
+                    <div class="btn-form">
+                        <button type="submit" class="btn btn-primary">Ingresar</button>
+                      </div>
           </form>
         </div>
       </div>
@@ -89,8 +99,11 @@
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
-          <form class="form-reg" action="">
+        <div class="modal-header justify-content-center">
+          <form class="form-reg " action="">
+            <div id="logo">
+              <img src="img/limp.png" alt="" width="100px">
+            </div>
             <div class="input-group input-group-sm mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-sm">Nombre</span>
@@ -108,7 +121,7 @@
             </div>
             <!-- <input class="input" type="text" placeholder="&#128100;Apellidos" required autofocus> -->
 
-            <div class="input-group flex-nowrap">
+            <div class="input-group input-group-sm mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text" id="addon-wrapping">@</span>
               </div>
@@ -117,7 +130,7 @@
             </div>
             <!-- <input class="input" type="email" placeholder="&#9993;Correo Electronico"> -->
 
-            <div class="input-group flex-nowrap">
+            <div class="input-group input-group-sm mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-sm">Telefono</span>
               </div>
@@ -125,9 +138,15 @@
                 aria-describedby="inputGroup-sizing-sm">
             </div>
             <!-- <input class="input" type="text" placeholder="&#128222;Telefono" required > -->
-            <input class="input" type="password" placeholder="&#8962;Contraseña" required>
+            <div class="input-group input-group-sm mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroup-sizing-sm">Contraseña</span>
+              </div>
+              <input type="text" class="form-control" aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-sm">
+            </div>
             <div class="btn-form">
-              <input class="btn-submit" type="submit" value="REGISTRAR">
+              <button type="submit" class="btn btn-primary">Registrar</button>
             </div>
           </form>
         </div>
