--- a/productos.html
+++ b/productos.html
@@ -20,16 +20,20 @@
         <button type="submit" class="btn btn-secondary" id="botonBuscar">Buscar</button>
     </div>
 
+
+    <!-- Loguearse -->
     <div id="login">
-        <div id="boton " class="container col-md-12 row justify-content-end">
-            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#Registro"  href="formularioregistro.html">Registrate</a>
+        <div id="boton" class="container col-md-12 row justify-content-end">
+          <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#Registro"
+            href="formularioregistro.html">Registrate</a>
+      </div>
+  
+      <!-- Registrarse -->
+        <div id="boton" class="container col-md-12 row justify-content-end">
+          <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#InicioSesion"
+            href="formularioingreso.html">Iniciar Sesion</a>
         </div>
-        
-        
-        <div id="boton" class="container col-md-12 row justify-content-end">    
-            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#InicioSesion" href="formularioingreso.html">Iniciar Sesion</a>
-        </div>
-    </div>
+      </div>
 </header>
 
   <div class="container col-md-6" id="nav">
@@ -46,7 +50,94 @@
     </ul>
   </div>
 
-<h1>PRODUCTOS</h1>
+  <div class="container" id="productos">
+      <div class="row ">
+        <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+          <img src="img/8.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Detergente</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+        <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+          <img src="img/9.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Perfume para pisos</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+        <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+          <img src="img/10.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Bolsas</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
+          </div>
+        </div>
+      </div>
+      <div class="row ">
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+            <img src="img/1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Detergente</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+            <img src="img/2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Perfume para pisos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+            <img src="img/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Bolsas</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="row ">
+            <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+              <img src="img/1.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Detergente</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                  content.</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+            <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+              <img src="img/6.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Perfume para pisos</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                  content.</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+            <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+              <img src="img/7.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Bolsas</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                  content.</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
+          </div>
 
 
 
