--- a/promos.html
+++ b/promos.html
@@ -20,16 +20,20 @@
         <button type="submit" id="botonBuscar"  class="btn btn-secondary">Buscar</button>
     </div>
 
+
+    <!-- Loguearse -->
     <div id="login">
-        <div id="boton " class="container col-md-12 row justify-content-end">
-            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#Registro"  href="formularioregistro.html">Registrate</a>
+        <div id="boton" class="container col-md-12 row justify-content-end">
+          <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#Registro"
+            href="formularioregistro.html">Registrate</a>
+      </div>
+  
+      <!-- Registrarse -->
+        <div id="boton" class="container col-md-12 row justify-content-end">
+          <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#InicioSesion"
+            href="formularioingreso.html">Iniciar Sesion</a>
         </div>
-        
-        
-        <div id="boton" class="container col-md-12 row justify-content-end">    
-            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#InicioSesion" href="formularioingreso.html">Iniciar Sesion</a>
-        </div>
-    </div>
+      </div>
 </header>
 
 <div class="container col-md-6" id="nav">
@@ -50,34 +54,37 @@
 <div class="titulo"><h1> PROMOS </h1></div>
 
 
-<div class="container">
+<div id="productos" class="container">
         <div class="row ">
-        <div class="card col-md-4" style="width: 18rem;">
-          <img src="https://picsum.photos/600/400/?1" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Detergente</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
+          <div class="card col-md-4" style="width: 18rem;">
+            <img src="img/1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Detergente</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+          <div class="card col-md-4" style="width: 18rem;">
+            <img src="img/2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Perfume para pisos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+          <div class="card col-md-4" style="width: 18rem;">
+            <img src="img/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Bolsas</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
           </div>
         </div>
-        <div class="card col-md-4" style="width: 18rem;">
-          <img src="https://picsum.photos/600/400/?2" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Perfume para pisos</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
-        </div>
-        <div class="card col-md-4" style="width: 18rem;">
-          <img src="https://picsum.photos/600/400/?3" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Bolsas</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Comprar</a>
-          </div>
-        </div>
-      </div>
-      </div>
+  </div>
   
 </body>
 
