--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </div>
 
   <!-- Modal Registro -->
-  <div id="productos" class="modal fade" id="Registro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  <div class="modal fade" id="Registro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
