--- a/promos.html
+++ b/promos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="estilos.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -54,9 +55,9 @@
 <div class="titulo"><h1> PROMOS </h1></div>
 
 
-<div id="productos" class="container">
+<div class="container">
         <div class="row ">
-          <div class="card col-md-4" style="width: 18rem;">
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
             <img src="img/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Detergente</h5>
@@ -65,7 +66,7 @@
               <a href="#" class="btn btn-primary">Comprar</a>
             </div>
           </div>
-          <div class="card col-md-4" style="width: 18rem;">
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
             <img src="img/2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Perfume para pisos</h5>
@@ -74,7 +75,7 @@
               <a href="#" class="btn btn-primary">Comprar</a>
             </div>
           </div>
-          <div class="card col-md-4" style="width: 18rem;">
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
             <img src="img/3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Bolsas</h5>
@@ -97,7 +98,7 @@
 
 
 
-      
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
