--- a/promos.html
+++ b/promos.html
@@ -16,9 +16,10 @@
 </head>
 <body>
 <header>
-    <div id="buscadorArticulos" class=" container col-md-12 row justify-content-end" >
-        <input type="text" placeholder="Busca tus articulos">
-        <button type="submit" id="botonBuscar"  class="btn btn-secondary">Buscar</button>
+  <form action="Post">
+    <div id="buscadorArticulos" class=" container col-md-12 row justify-content-end">
+      <input type="text" placeholder="Busca tus articulos">
+      <button type="submit" id="botonBuscar" class="nav-link active btn btn-primary">Buscar</button>
     </div>
 
 
@@ -57,7 +58,7 @@
 
 <div class="container">
         <div class="row ">
-          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
             <img src="img/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Detergente</h5>
@@ -66,7 +67,7 @@
               <a href="#" class="btn btn-primary">Comprar</a>
             </div>
           </div>
-          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
             <img src="img/2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Perfume para pisos</h5>
@@ -75,7 +76,7 @@
               <a href="#" class="btn btn-primary">Comprar</a>
             </div>
           </div>
-          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
             <img src="img/3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Bolsas</h5>
