--- a/productos.html
+++ b/productos.html
@@ -16,9 +16,10 @@
 </head>
 <body>
 <header>
-    <div id="buscadorArticulos" class=" container col-md-12 row justify-content-end" >
-        <input type="text" placeholder="Busca tus articulos">
-        <button type="submit" class="btn btn-secondary" id="botonBuscar">Buscar</button>
+  <form action="Post">
+    <div id="buscadorArticulos" class=" container col-md-12 row justify-content-end">
+      <input type="text" placeholder="Busca tus articulos">
+      <button type="submit" id="botonBuscar" class="nav-link active btn btn-primary">Buscar</button>
     </div>
 
 
@@ -53,7 +54,7 @@
 
   <div class="container" id="productos">
       <div class="row ">
-        <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+        <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
           <img src="img/8.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Detergente</h5>
@@ -62,7 +63,7 @@
             <a href="#" class="btn btn-primary">Comprar</a>
           </div>
         </div>
-        <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+        <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
           <img src="img/9.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Perfume para pisos</h5>
@@ -71,7 +72,7 @@
             <a href="#" class="btn btn-primary">Comprar</a>
           </div>
         </div>
-        <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+        <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
           <img src="img/10.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Bolsas</h5>
@@ -82,7 +83,7 @@
         </div>
       </div>
       <div class="row ">
-          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
             <img src="img/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Detergente</h5>
@@ -91,7 +92,7 @@
               <a href="#" class="btn btn-primary">Comprar</a>
             </div>
           </div>
-          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
             <img src="img/2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Perfume para pisos</h5>
@@ -100,7 +101,7 @@
               <a href="#" class="btn btn-primary">Comprar</a>
             </div>
           </div>
-          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+          <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
             <img src="img/3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Bolsas</h5>
@@ -111,7 +112,7 @@
           </div>
         </div>
         <div class="row ">
-            <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+            <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
               <img src="img/1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Detergente</h5>
@@ -120,7 +121,7 @@
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
-            <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+            <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
               <img src="img/6.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Perfume para pisos</h5>
@@ -129,7 +130,7 @@
                 <a href="#" class="btn btn-primary">Comprar</a>
               </div>
             </div>
-            <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="300">
+            <div class="card col-md-4" style="width: 18rem;" data-aos="fade-in" data-aos-delay="150">
               <img src="img/7.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Bolsas</h5>
